<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itm_Points"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/lab_Points"
        app:showAsAction="always" />
    <item
        android:id="@+id/itm_Func"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/lab_Func"
        app:showAsAction="always" />
    <item
        android:id="@+id/itm_Increase"
        android:icon="@android:drawable/ic_menu_zoom"
        android:title="@string/but_Big"
        app:showAsAction="always" />
    <item
        android:id="@+id/itm_Decrease"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/but_Small"
        app:showAsAction="always" />
    <item
        android:id="@+id/itm_Reset"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/but_Reset"
        app:showAsAction="always" />
</menu>